--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/**/*.test.js --timeout=200000" 
+    "test": "mocha ./test/**/*.test.js --timeout=200000 --reporter mochawesome"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "chai": "^6.2.0",
     "dotenv": "^17.2.3",
     "mocha": "^11.7.4",
+    "mochawesome": "^7.1.4",
     "supertest": "^7.1.4"
   }
 }
